Move Zarr v2/v3 implementations to ContainerDialect/HierarchyStore/KeyValueRoot
Remove hierarchy/metadata method implementations. This is delegated to
ContainerDialect now. Add implementations for ZarrV2Dialect and
ZarrV3Dialect.

Remove (now unused) ZarrJsonCache.
Caching is now handled at the lower level HierarchyStore, which makes
special-case handling of N5/Zarr2/Zarr3 dialects obsolete.

Replace all KeyValueAccess/String usage with KeyValueRoot/N5Path.